# jupyternots_training

./: .gitignore  CITATION.cff  README.md  environment.yml  example_modLC_part1.ipynb  pyproject.toml  requirements.txt  run.sh  setup.py  setup1.py  test.toml
.reuse/: dep5
beginner/: beginner_course_nov22.pptx  example_modLC_part1.ipynb  example_modLC_part2.ipynb  nov_candidate1.ipynb  survey_manipulation.ipynb  test_jupyter_metadata_handson.ipynb
beginner/datacite/: DataCite_converter_MIT_examples.ipynb  test_datacite_dataset_fromxml_tojson_tocsv.ipynb  test_datacite_xml_1.ipynb
beginner/notebooks/NeXus/: Nexus_from_publicationdata_nov.ipynb  Nexus_manipulation.ipynb  nov_candidate1_copy.ipynb  nov_candidate1_newfiles.ipynb
beginner/notebooks/datacite/: datacite-relatedIdentifierType-v4.xsd
beginner/notebooks/json/: JSON.ipynb
beginner/notebooks/yaml_editing/: intro_yaml.ipynb
notebooks/: example_modLC_part1.ipynb
scratch/: Untitled1.ipynb  jupylabnov_candidate1.ipynb  jupylabnov_candidate1_gerritfile.ipynb
trainer/profiling/: uda_metadata_in_phases_nov21.doc
training-material/: example.ipynb  lecture.ipynb  lecture.ipynb.license  token.md
training-supplement/: __init__.py  header.py  script01.py  script02.py  script03.py  script04.py  script05.py  script06.py  script07.py  script08.py  script09.py
