# SPDX-FileCopyrightText: 2022 Thomas Foerster <thomas.foerster@hzdr.de>
#
# SPDX-License-Identifier: MIT

[tool.poetry]
name = "rdm-training"
version = "0.1.0"
description = ""
authors = ["Foerster, T. <thomas.foerster@hzdr.de>"]

[tool.poetry.dependencies]
python = "^3.8"
h5py = "^3.6.0"
numpy = "^1.22.3"
jupyterlab-h5web = "^3.0.0"
ipykernel = "^6.13.0"
#jupyterlab-h5web==1.3.0

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyterlab = "^3.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
